Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 1.4
-
None
-
None
Description
We're seeing impala crash on two different clusters running the tpcds queries. Looks like memory corruption.
We don't see the crash consistently enough for these to be definitive but just in case.
Run passed with this commit:
733769a9a4ac178cecdcf969e467afb673418d88
Failed run was:
319a0a0f665eeea1058f15bf4c67789736cd1e49